# nayax_client_kiosk_demo

Emv-Core-client-armv8a-poky-linux-0.9-58/Emv-Core-client/: .autotools  .cproject  .project  Makefile.am  configure.ac
Emv-Core-client-armv8a-poky-linux-0.9-58/Emv-Core-client/demo/: Makefile.am  otiKioskDemo  otiKioskDemo.c
Emv-Core-client-armv8a-poky-linux-0.9-58/Emv-Core-client/libotikiosk/: Makefile.am.dist  emv-core-lib-version.h  libotikiosk.h  libotikiosk_types.h
Emv-Core-client-armv8a-poky-linux-0.9-58/Emv-Core-client/libotikiosk/src/: kiosk_commands.c  kiosk_commands.h  libotikiosk.c  mjson.c  ot_log.cpp  ot_log.h  otiKiosk_log.h
